--- a/Shadow-Flip-Oh/src/css/estilos.css
+++ b/Shadow-Flip-Oh/src/css/estilos.css
@@ -32,8 +32,9 @@ body {
 
 .cabecalho .titulo {
 	color: #ffffff;
-	padding-top: 30px;
-	font-size: 50px;
+	padding-top: 50px; 
+	padding-bottom: 20px;
+	font-size: 42px;
 }
 
 .cartao {
@@ -45,6 +46,7 @@ body {
     position: absolute;
 	border-radius: 8px;
 	padding-bottom: 10px;
+	
 }
 
 .cartao.selecionado {
