--- a/Shadow-Flip-Oh/src/css/estilos.css
+++ b/Shadow-Flip-Oh/src/css/estilos.css
@@ -14,12 +14,12 @@ body {
                       url(../assets/fundo-site.jpg); 
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center; 
     display: flex;
     flex-direction: column; 
     min-height: 100vh;
     align-items: center; 
     justify-content: center;
-    box-sizing: border-box;
 }
 
 .cabecalho {
@@ -31,8 +31,11 @@ body {
 }
 
 .cabecalho .titulo {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	color: #ffffff;
-	padding-top: 50px; 
+	padding-top: 20px; 
 	padding-bottom: 20px;
 	font-size: 42px;
 }
