--- a/Shadow-Flip-Oh/src/css/estilos.css
+++ b/Shadow-Flip-Oh/src/css/estilos.css
@@ -156,26 +156,33 @@ body {
 	background: url(../assets/fundo-7.jpg) no-repeat;
 }
 
-.btn-seta{
-    background-color: #00f0ff;
+.btn-seta {
+    background-color: rgba(0, 240, 255, 0.2);
     width: 70px;
     height: 70px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 50px;
+    border-radius: 50%;
     border: 0;
     cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out, color 0.3s ease-in-out;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2),
+                inset 0 0 0 4px rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    position: relative; 
+    z-index: 1; 
 }
 
-.btn-seta.btn-voltar{
+.btn-seta.btn-voltar {
     transform: rotateY(180deg);
 }
 
-.btn-seta:hover{
-    box-shadow: 0 0 15px #00f0ff;
+.btn-seta:hover {
+    background-color: rgba(0, 240, 255, 0.8);
+    box-shadow: 0 0 20px rgba(0, 240, 255, 0.7),
+                inset 0 0 0 3px rgba(255, 255, 255, 1);
 }
 
 body::-webkit-scrollbar-track{
