--- a/Shadow-Flip-Oh/src/css/estilos.css
+++ b/Shadow-Flip-Oh/src/css/estilos.css
@@ -168,21 +168,33 @@ body {
     cursor: pointer;
     transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out, color 0.3s ease-in-out;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2),
-                inset 0 0 0 4px rgba(255, 255, 255, 0.7);
+                inset 0 0 0 3px rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     position: relative; 
     z-index: 1; 
 }
 
-.btn-seta.btn-voltar {
+.icon-seta {
+    color: white; 
+    width: 40px; 
+    height: 40px;
+    z-index: 2; 
+    transition: color 0.3s ease-in-out;
+}
+
+.btn-seta.btn-voltar .icon-seta {
     transform: rotateY(180deg);
 }
 
 .btn-seta:hover {
-    background-color: rgba(0, 240, 255, 0.8);
-    box-shadow: 0 0 20px rgba(0, 240, 255, 0.7),
+    background-color: rgba(0, 240, 255, 0.7);
+    box-shadow: 0 0 20px rgba(0, 240, 255, 0.8),
                 inset 0 0 0 3px rgba(255, 255, 255, 1);
+}
+
+.btn-seta:hover .icon-seta {
+    color: #000; 
 }
 
 body::-webkit-scrollbar-track{
